# bridge/apps/backend/src/context/dto/context-response.dto.ts
@@ -1,0 +1,19 @@
+import { Context } from '../entities/context.entity';
+
+export class ContextResponseDto {
+  id: number;
+  name: string;
+  content: string;
+  createdAt: Date;
+  updatedAt: Date;
+
+  static fromEntity(context: Context): ContextResponseDto {
+    return {
+      id: context.id,
+      name: context.name,
+      content: context.content,
+      createdAt: context.createdAt,
+      updatedAt: context.updatedAt,
+    };
+  }
+}
