# bridge/apps/backend/src/context/dto/update-context.dto.ts
@@ -1,0 +1,5 @@
+import { PartialType } from '@nestjs/mapped-types';
+
+import { CreateContextDto } from './create-context.dto';
+
+export class UpdateContextDto extends PartialType(CreateContextDto) {}
